--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,12 @@ margin-right: 5px;
 color: black;
 background-color: #FFC312;
 width: 100px;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;  
 }
 
 .login_btn:hover{
